src/test/ui/augmented-assignments.stderr
error[E0505]: cannot move out of `x` because it is borrowed
  --> $DIR/augmented-assignments.rs:17:5
   |
LL |       x
   |       -
   |       |
   |  _____borrow of `x` occurs here
   | |
LL | |     //~^ borrow later used here
LL | |     //~| NOTE borrow of `x` occurs here
LL | |     +=
LL | |     x;
   | |     ^
   | |     |
   | |_____move out of `x` occurs here
   |       borrow later used here

error[E0596]: cannot borrow `y` as mutable, as it is not declared as mutable
  --> $DIR/augmented-assignments.rs:24:5
   |
LL |     let y = Int(2);
   |         - help: consider changing this to be mutable: `mut y`
...
LL |     y   //~ ERROR cannot borrow `y` as mutable, as it is not declared as mutable
   |     ^ cannot borrow as mutable

error: aborting due to 2 previous errors

Some errors occurred: E0505, E0596.
For more information about an error, try `rustc --explain E0505`.
